Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6602

rpl.rpl_mdev6020 fails sporadically with SIGABRT

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 10.0.13-galera
    • None
    • None
    • Ubuntu 12.04, 32-bit

    Description

      #6 0xb71c520f in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #7 0xb71c8855 in __GI_abort () at abort.c:91
      #8 0x088055e6 in lock_reset_lock_and_trx_wait (lock=0xa6d71250) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:876
      #9 0x088095e2 in lock_grant (lock=0xa6d71250) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:2718
      #10 0x0880e6b4 in lock_table_dequeue (in_lock=0xac8e8320) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:5087
      #11 0x08813967 in lock_release_autoinc_last_lock (autoinc_locks=0xa6ce40d0) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:7077
      #12 0x08813a6c in lock_release_autoinc_locks (trx=0xa5fcb440) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:7119
      #13 0x08814024 in lock_cancel_waiting_and_release (lock=0xa6408fd0) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:7358
      #14 0x0880d4bf in lock_table_create (c_lock=0xac8e8320, table=0xa65c5640, type_mode=260, trx=0xac874440) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:4578
      #15 0x0880de21 in lock_table_enqueue_waiting (c_lock=0xac8e8320, mode=4, table=0xa65c5640, thr=0xa559f040) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:4806
      #16 0x0880e2fa in lock_table (flags=0, table=0xa65c5640, mode=LOCK_AUTO_INC, thr=0xa559f040) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/lock/lock0lock.cc:4968
      #17 0x088b32aa in row_lock_table_autoinc_for_mysql (prebuilt=0xa5d89640) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/row/row0mysql.cc:1117
      #18 0x087b31bc in ha_innobase::innobase_lock_autoinc (this=0xa5f81048) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/handler/ha_innodb.cc:7863
      #19 0x087b328b in ha_innobase::innobase_set_max_autoinc (this=0xa5f81048, auto_inc=150) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/handler/ha_innodb.cc:7914
      #20 0x087b3f30 in ha_innobase::write_row (this=0xa5f81048, record=0xac9cd058 "\365\061", ' ' <repeats 11 times>) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/xtradb/handler/ha_innodb.cc:8242
      #21 0x0849219f in handler::ha_write_row (this=0xa5f81048, buf=0xac9cd058 "\365\061", ' ' <repeats 11 times>) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/handler.cc:6051
      #22 0x08a55854 in ha_partition::write_row (this=0xa5dac448, buf=0xac9cd058 "\365\061", ' ' <repeats 11 times>) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/ha_partition.cc:4170
      #23 0x08492163 in handler::ha_write_row (this=0xa5dac448, buf=0xac9cd058 "\365\061", ' ' <repeats 11 times>) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/handler.cc:6051
      #24 0x08580d0d in Rows_log_event::write_row (this=0xa6045378, rgi=0xa6baf200, overwrite=false) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/log_event.cc:11480
      #25 0x08580e8d in Write_rows_log_event::do_exec_row (this=0xa6045378, rgi=0xa6baf200) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/log_event.cc:11674
      #26 0x0857cfe9 in Rows_log_event::do_apply_event (this=0xa6045378, rgi=0xa6baf200) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/log_event.cc:9941
      #27 0x081ebec1 in Log_event::apply_event (this=0xa6045378, rgi=0xa6baf200) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/log_event.h:1343
      #28 0x081e20c5 in apply_event_and_update_pos (ev=0xa6045378, thd=0xa6ca7038, rgi=0xa6baf200, rpt=0xac95b968) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/slave.cc:3277
      #29 0x083f900a in rpt_handle_event (qev=0xa607c138, rpt=0xac95b968) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/rpl_parallel.cc:36
      #30 0x083fab22 in handle_rpl_parallel_thread (arg=0xac95b968) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/sql/rpl_parallel.cc:724
      #31 0x0865723b in pfs_spawn_thread (arg=0xaca8dab8) at /home/nirbhay/project/repo/maria/bld/maria-10.0-galera/storage/perfschema/pfs.cc:1860
      #32 0xb7680d4c in start_thread (arg=0xacc5cb40) at pthread_create.c:308
      #33 0xb7286dde in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            nirbhay_c Nirbhay Choubey (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.75d
                0.75d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.