storage/xtradb/include/ha_prototypes.h
@@ -293,6 +293,7 @@ wsrep_innobase_kill_one_trx(void *thd_ptr,
 my_bool wsrep_thd_set_PA_safe(void *thd_ptr, my_bool safe);
 int wsrep_thd_conflict_state(void *thd_ptr, my_bool sync);
 my_bool wsrep_thd_is_BF(void *thd_ptr, my_bool sync);
+my_bool wsrep_thd_is_wsrep(void *thd_ptr);
 int wsrep_trx_order_before(void *thd1, void *thd2);
 int wsrep_innobase_mysql_sort(int mysql_type, uint charset_number,
 			      unsigned char* str, unsigned int str_length,
